--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     vaga para estágio na área de tecnologia da informação</p>
 
                 <div class="icons-social">
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.instagram.com/glmazin01/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/gabriel-mazin-6226a31b9/"><i class="fa-brands fa-linkedin-in"></i></a>
 
                 </div>
                 <!--icons-social-->
